--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -10,7 +10,7 @@
       = mail_to @user.email
   .application_date
     = content_tag(:em, display_date(@user.confirmed_at))
-    %p.edit= link_to "edit user", edit_admin_user_path(@user)
+    %p= link_to "Edit candidate", edit_admin_user_path(@user), :class => "edit"
     
   .spacer
   .card
