--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -391,6 +391,11 @@ form.main .required_mention {
   right:0;
 }
 
+a.edit {
+  background:url(/images/edit_icon.png) no-repeat;
+  padding:2px 0 0 25px;
+}
+
 #footer {
   padding:30px 0;
   text-align:center;
