Doing the documents' file upload myself Cleaning for Octave

--- a/app/views/admin/documents/index.html.haml
+++ b/app/views/admin/documents/index.html.haml
@@ -1,9 +1,10 @@
-- title 'Documents'
+- t = "Documents"
+- title t
 
 = link_to "New document", new_admin_document_path
 
 .text
-  %h3= "Documents"
+  %h3= t
   %table
     %colgroup
       - 7.times do
