--- a/app/views/admin/teachers/edit.html.haml
+++ b/app/views/admin/teachers/edit.html.haml
@@ -6,6 +6,7 @@
   - f.inputs do
     = f.input :name, :required => true
     = f.input :email, :required => true
+    = f.input :module_id
     
   - f.buttons do
     = submit_tag "Update"
