--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -12,4 +12,4 @@
       
     - f.buttons do
       = f.commit_button "Send message"
-    .required_mention= "<abbr title='required'>*</abbr> required"
+    .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
