--- a/app/views/registrations/edit.html.haml
+++ b/app/views/registrations/edit.html.haml
@@ -1,6 +1,7 @@
-- title " | Edit my information"
+- t = "Edit my information"
+- title t
 
-%h2= "Edit my information"
+%h2= t
 - form_for resource_name, resource, :url => registration_path(resource_name), :html => { :method => :put } do |f|
   = f.error_messages
   
