--- a/app/views/admin/teachers/_teacher.html.haml
+++ b/app/views/admin/teachers/_teacher.html.haml
@@ -1,5 +1,7 @@
 %tr[teacher]{ :class => cycle("", "alt") }
-  %td= link_to image_tag("/images/admin/#{'not_' unless teacher.has_accepted_invitation?}selected.png", :alt => "#{'not ' unless teacher.has_accepted_invitation?} selected"), admin_teacher_path(teacher)
+  %td
+    - if teacher.has_accepted_invitation?
+      = link_to image_tag("/images/admin/selected.png", :alt => "selected"), admin_teacher_path(teacher)
   %td= link_to teacher.name || "No name yet", admin_teacher_path(teacher)
   %td= mail_to(teacher.email, nil, :encode => 'hex', :class => "link")
   %td= link_to("edit", edit_admin_teacher_path(teacher))
