--- a/app/views/admin/documents/_form.html.haml
+++ b/app/views/admin/documents/_form.html.haml
@@ -2,9 +2,9 @@
   - f.inputs do
     = f.input :title
     = f.input :module_id, :as => :select, :collection => ProgramModule.all, :selected => 1
-    = f.input :file, :as => :file
+    = f.input :file, :as => :file, :required => true
     = pretty_file(@document)
     
   - f.buttons do
-    = submit_tag @document.new_record? ? "Create" : "Update"
+    = f.commit_button @document.new_record? ? "Create" : "Update"
   .required_mention= raw "#{content_tag(:abbr, '*', :title => 'required')} required"
