--- a/app/views/layouts/program.html.haml
+++ b/app/views/layouts/program.html.haml
@@ -19,6 +19,7 @@
     #global
       = render 'layouts/header'
       #content
+        = render 'layouts/user_header'
         = render 'layouts/teacher_header'
         %h1= yield(:h1)
         = yield
