--- a/app/views/mintt_mailer/sign_up_instructions.html.haml
+++ b/app/views/mintt_mailer/sign_up_instructions.html.haml
@@ -1,1 +1,1 @@
-= Liquid::Template.parse(MailTemplate.find_by_title('user_sign_up').content).render('user' => @user)
+= Liquid::Template.parse(MailTemplate.find_by_title('user_invitation').content).render('user' => @user)
