--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -1,7 +1,7 @@
 - title "Mail templates > Edit #{mail_template_title(@mail_template)}"
 
 .text
-  %h3= "Editing template '#{mail_template_title(@mail_template)}'"
+  %h3= raw "Editing template: #{content_tag(:em, mail_template_title(@mail_template))}"
 #register
   - semantic_form_for [:admin, @mail_template],  :html => { :class => "main" } do |f|
     - f.inputs do
