--- a/app/views/admin/teachers/edit.html.haml
+++ b/app/views/admin/teachers/edit.html.haml
@@ -1,10 +1,10 @@
-- title "Teacher > Edit #{@teacher.name}"
+- title "Teacher > Edit teacher: #{@teacher.name_or_email}"
 
 .text
-  %h3= "Editing #{@teacher.name}"
+  %h3= "Editing teacher: #{content_tag(:em, @teacher.name_or_email}"
 - semantic_form_for [:admin, @teacher], :html => { :class => "main" } do |f|
   - f.inputs do
-    = f.input :name, :required => true
+    = f.input :name
     = f.input :email, :required => true
     = f.input :module_id
     
