--- a/app/views/admin/documents/_document.html.haml
+++ b/app/views/admin/documents/_document.html.haml
@@ -1,5 +1,6 @@
 %tr[document]{ :class => cycle("", "alt") }
   %td= link_to document.title, admin_document_path(document)
   %td= document.module_id
+  %td{ :class => published_icon(document) }= published_icon(document)
   %td= link_to("edit", edit_admin_document_path(document))
   %td= button_to("delete", admin_document_path(document), :confirm => "Are you sure?", :method => :delete, :class => "button delete")
