--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -23,7 +23,7 @@
       %h3
         %strong= "Module 1"
         = "About inventions and inventors"
-      .desc= "This module is focusing on the very beginning of the innovation chain : the invention in a scientific research environment. It will address many questions in this field such as what is an invention? What are the various types of inventions? What is the difference between an invention and a discovery? Who is an inventor, what are his/her main qualities, duties and rights and which benefits he/she might have? Publish and protect, is it compatible? How to disclose an invention at EPFL? etc. The participants will be exposed to real cases and meet also an invited speaker who will talk about his/her experiences as scientist/inventor who participated actively to an innovation adventure."
+      .desc= raw "This module is focusing on the very beginning of the innovation chain : the invention in a scientific research environment. It will address many questions in this field such as what is an invention? What are the various types of inventions? What is the difference between an invention and a discovery? Who is an inventor, what are his/her main qualities, duties and rights and which benefits he/she might have? Publish and protect, is it compatible? How to disclose an invention at EPFL? etc. The participants will be exposed to real cases and meet also an invited speaker who will talk about his/her experiences as scientist/inventor who participated actively to an innovation adventure."
       
   - module_box do
     .left
@@ -37,7 +37,7 @@
       %h3
         %strong= "Module 2"
         = "Evaluate the Potential"
-      .desc= "The commercial potential of an invention, will show that no technology has any value by itself. It is as important to consider its applications. Through 2 case studies, the module will aim at sensitize the audience about the gaps that may exist between an invention and its possible product application. A “check-list” listing the evaluation criteria and related questions that an inventor should ask himself for this evaluation will be built by the participants and a synthesis will be provided at the end of the module."
+      .desc= raw "The commercial potential of an invention, will show that no technology has any value by itself. It is as important to consider its applications. Through 2 case studies, the module will aim at sensitize the audience about the gaps that may exist between an invention and its possible product application. A “check-list” listing the evaluation criteria and related questions that an inventor should ask himself for this evaluation will be built by the participants and a synthesis will be provided at the end of the module."
       
   - module_box do
     .left
@@ -51,7 +51,7 @@
       %h3
         %strong= "Module 3"
         = "Intellectual Property"
-      .desc= "Intellectual property deals with the legal protection of inventions, software and other intellectual creations. What kind of protection can you get? What advantages does it bring?  How much does it cost? What are the best protection strategies?  This module will show the benefits and pitfalls of patents, copyright and other intellectual property rights based on real cases.<br /> An invited guest will also bring to the class his/her practical experiences in the field of intellectual property matters."
+      .desc= raw "Intellectual property deals with the legal protection of inventions, software and other intellectual creations. What kind of protection can you get? What advantages does it bring?  How much does it cost? What are the best protection strategies?  This module will show the benefits and pitfalls of patents, copyright and other intellectual property rights based on real cases.<br /> An invited guest will also bring to the class his/her practical experiences in the field of intellectual property matters."
       
   - module_box do
     .left
@@ -65,7 +65,7 @@
       %h3
         %strong= "Module 4"
         = "Licensing"
-      .desc= 'Transferring new technologies and bright inventions to industry is an important mission of the university. As an inventor, having contributed to such technologies and inventions is a great achievement, but, in order to bring them to the market, licensing to industry is a "must" - and it is an absolute reward for the inventors to help making it happen.<br /> This module focuses on licensing, the most common way to transfer technologies. It is a very interactive module combining case studies and examples to illustrate the essential components of the license agreement. It also aims to provide a basis for licensing negotiations.'
+      .desc= raw 'Transferring new technologies and bright inventions to industry is an important mission of the university. As an inventor, having contributed to such technologies and inventions is a great achievement, but, in order to bring them to the market, licensing to industry is a "must" - and it is an absolute reward for the inventors to help making it happen.<br /> This module focuses on licensing, the most common way to transfer technologies. It is a very interactive module combining case studies and examples to illustrate the essential components of the license agreement. It also aims to provide a basis for licensing negotiations.'
       
   - module_box do
     .left
@@ -79,7 +79,7 @@
       %h3
         %strong= "Module 5"
         = "Start-up"
-      .desc= "To create a start-up is in some cases to be the only way for an inventor to demonstrate the validity of an innovation while everybody else has yet to fully grasp its potential.<br /> However before moving forward, it is necessary for the aspiring entrepreneur to understand what it takes to build a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
+      .desc= raw "To create a start-up is in some cases to be the only way for an inventor to demonstrate the validity of an innovation while everybody else has yet to fully grasp its potential.<br /> However before moving forward, it is necessary for the aspiring entrepreneur to understand what it takes to build a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
       
   - module_box do
     .left
@@ -100,4 +100,4 @@
       %h3
         %strong= "Module 6"
         = "From innovation to sales. A long way?"
-      .desc= "Philippe Eyries will explain that you are going to love to sell: If you like people. If you can explain clearly (i) the existing pain, (ii) the solution and (iii) the value proposition. If you choose the right direction and the right person. If you accept help from your network of partners."
+      .desc= raw "Philippe Eyries will explain that you are going to love to sell: If you like people. If you can explain clearly (i) the existing pain, (ii) the solution and (iii) the value proposition. If you choose the right direction and the right person. If you accept help from your network of partners."
