--- a/app/views/admin/documents/show.html.haml
+++ b/app/views/admin/documents/show.html.haml
@@ -10,4 +10,4 @@
   %p= "Module ID: #{@document.module_id}"
   
   #document{ :class => pretty_class(@document) }
-    %p= link_to pretty_file(@document, :width => 400), @document.url
+    %p= link_to pretty_file(@document), @document.url
