Cleaning admin views (titles mostly)

--- a/app/views/admin/documents/index.html.haml
+++ b/app/views/admin/documents/index.html.haml
@@ -1,8 +1,6 @@
-- t = "Documents"
-- title t
+- title "Documents"
 
 .text
-  %h3= t
   .actions_right= link_to "New document", new_admin_document_path
   %table
     %colgroup
