--- a/app/views/admin/documents/show.html.haml
+++ b/app/views/admin/documents/show.html.haml
@@ -1,4 +1,4 @@
-- title "Documents > #{@document.title}"
+- title "Document: #{content_tag(:em, @document.title)}", false
 
 .text.sheet
   .right_box
