--- a/app/views/admin/mail_templates/index.html.haml
+++ b/app/views/admin/mail_templates/index.html.haml
@@ -1,8 +1,6 @@
-- title 'Mail templates'
+- title "Mail templates"
 
 .text
-  %h3= "Mail templates"
-  
   %table
     - 2.times do
       %col{ :class => "even" }
