--- a/app/views/admin/teachers/edit.html.haml
+++ b/app/views/admin/teachers/edit.html.haml
@@ -1,7 +1,5 @@
-- title "Teacher > Edit teacher: #{@teacher.name_or_email}"
+- title "Edit teacher: #{content_tag(:em, @teacher.name_or_email)}"
 
-.text
-  %h3= "Editing teacher: #{content_tag(:em, @teacher.name_or_email}"
 - semantic_form_for [:admin, @teacher], :html => { :class => "main" } do |f|
   - f.inputs do
     = f.input :name
