--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -32,12 +32,14 @@
           %li.home
             - link_to admin_path do
               %span= "Home"
-          %li{ :class => ('active' if controller_name == 'users') }= link_to "Candidates", admin_users_path
+          %li{ :class => ('active' if controller_name == 'users') }= link_to "Students", admin_users_path
           %li{ :class => ('active' if controller_name == 'teachers') }= link_to "Teachers", admin_teachers_path
           %li{ :class => ('active' if controller_name == 'documents') }= link_to "Documents", admin_documents_path
           %li{ :class => ('active' if controller_name == 'messages') }= link_to "Messages", admin_messages_path
           %li{ :class => ('active' if controller_name == 'mail_templates') }= link_to "Mail templates", admin_mail_templates_path
       #content.admin{ :class => "#{controller_name} #{action_name}" }
+        .text
+          %h3= yield(:page_title)
         = yield
       #sidebar
         = yield :sidebar
