--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
       #content
         = render 'layouts/user_header'
         = render 'layouts/teacher_header'
-        %h1= yield(:h1)
+        %h1= yield(:page_title)
         = yield
       = render 'layouts/sidebar'
       = render 'layouts/footer'
