--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -1,8 +1,7 @@
-- title "Program & documents"
+- title "Program Overview & Documents"
 
 .text
-  %h3= "Program Overview"
-  %p= "Here is an overview of the course program. Detailed schedule will be communicated on this site to confirmed registered students"
+  %p= "This is the detailed schedule of the course program."
   
 %ul
   %li#day_one
