--- a/app/views/admin/documents/edit.html.haml
+++ b/app/views/admin/documents/edit.html.haml
@@ -1,6 +1,3 @@
-- title "Document > Edit #{@document.title}"
+- title "Edit document: #{content_tag(:em, truncate_middle(@document.title, :length => 25))}"
 
-.text
-  %h3= "Editing #{@document.title}"
-  
 = render :partial => 'form'
