--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,14 +16,13 @@
     
   %body
     = render 'layouts/flash', :object => flash
+    = render 'layouts/user_header'
     #global
       = render 'layouts/header'
       #content
-        = render 'layouts/user_header'
-        = render 'layouts/teacher_header'
         %h1= yield(:h1)
         = yield
-      = render 'layouts/sidebar'
+      = render 'layouts/sidebar' unless controller_name == "programs"
       = render 'layouts/footer'
       
     - google_analytics
