--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -400,6 +400,26 @@ a.edit {
   padding:2px 0 0 25px;
 }
 
+#user_header {
+  background:#000;
+  position:relative;
+  z-index:10;
+}
+
+#user_header .wrap {
+  width:880px;
+  margin:0 auto;
+  padding:10px 0;
+  font-weight:600;
+  font-size:13px;
+}
+
+#user_header a.login {
+  background:url(/images/arrow_1.png) no-repeat 100% 0;
+  padding:0 20px 0 0;
+  margin-right:20px;
+}
+
 #footer {
   padding:30px 0;
   text-align:center;
@@ -412,7 +432,7 @@ a.edit {
   text-shadow:none;
   font-weight:bold;
   font-size:30px;
-  border-bottom: 1px solid #000;
+  border-bottom:1px solid #000;
 }
 
 #flash.notice, #flash.success {
