--- a/app/views/mintt_mailer/new_message.text.plain.haml
+++ b/app/views/mintt_mailer/new_message.text.plain.haml
@@ -1,6 +1,6 @@
 = raw "#{@message.sender_name} <#{@message.sender_email}> sent you a message from mintt.epfl.ch."
 = "\n\n"
-= "Click on the following link to view it in the mintt administration interface:\n#{admin_message_url(@message)}"
+= "Click on the following link to view it in the mintt administration interface:\n\n#{admin_message_url(@message)}"
 = "\n\n"
 = "Message :"
 = "\n#{@message.content}"
