--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -116,7 +116,7 @@ h2.headline {
 /*  text-align:justify;*/
 }
 
-.text h3 {
+.text h3, h3.title {
   font-size:28px;
   font-weight:200;
   padding:0 0 10px;
@@ -334,13 +334,13 @@ form.main .file input {
   margin:0 0 10px;
 }
 
-form.main .string label, form.main .text label, form.main .select label, form.main .file label {
+form.main .string label, form.main .password label, form.main .text label, form.main .select label, form.main .file label {
   display:block;
   padding:12px 0 2px;
   line-height:18px;
 }
 
-form.main .string input, form.main textarea {
+form.main .string input, form.main .password input, form.main textarea {
   background:#bbb;
   border:none;
   width:590px;
@@ -356,7 +356,7 @@ form.main textarea {
   resize:vertical;
 }
 
-form.main .string input:focus, form.main textarea:focus {
+form.main .string input:focus, form.main .password input:focus, form.main textarea:focus {
   background:#fff;
   border:2px solid #666;
   outline-color:#c3ff00;
@@ -370,6 +370,10 @@ form.main li.radio li label {
 form.main li.date li label {display:none;}
 form.main li.date ol {margin:15px 0;}
 form.main li.date li {display:inline;}
+
+form.main li.boolean {
+  padding:20px 0 0;
+}
 
 form.main li.boolean input {
   margin:0 10px 0 0;
