--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -3,55 +3,70 @@
 .text
   %p= "This is the detailed schedule of the course program."
   
-%ul
-  %li#day_one
-    %ol
-      %li= "08:15 - 08:30 : Accueil"
-      %li= "08:30 - 09:00 : Welcome"
+.day
+  .text.slot
+    .left_box= "08:15"
+    .right_box= "Accueil"
+    
+  .text.slot
+    .left_box= "08:30"
+    .right_box= "Welcome"
+    
+  .text.slot#module1
+    .left_box= "09:00"
+    .right_box
+      %p= "Invention and Inventors"
+      %ul
+        = list_documents_for_module(1)
+          
+  .text.slot
+    .left_box= "10:30"
+    .right_box= "Pause"
+    
+  .text.slot
+    .left_box
+      %p= "11:00"
+      %p= "12:00"
+    .right_box= "Intervenant"
+    
+  .text.slot
+    .left_box= "12:05"
+    .right_box= "Lunch"
+    
+  %li#module2
+    %p= "13:30 - 15:00 : Identify the Potential"
+    %p= "15:00 - 15:30 : Pause"
+    %ul.documents
+      = list_documents_for_module(2)
+    
+  %li#module3
+    %p= "15:30 - 16:30 : Intellectual Property"
+    %p= "16:30 - 17:30 : Intervenant"
+    %p= "17:30 - 18:00 : Case study"
+    %ul.documents
+      = list_documents_for_module(3)
       
-      %li#module1
-        %p= "09:00 - 10:30 : Invention and Inventors"
-        %p= "10:30 - 11:00 : Pause"
-        %p= "11:00 - 12:00 : Intervenant"
-        %p= "12:05 - 13:30 : Lunch"
-        %ul.documents
-          %ul
-            = list_documents_for_module(1)
-              
-      %li#module2
-        %p= "13:30 - 15:00 : Identify the Potential"
-        %p= "15:00 - 15:30 : Pause"
-        %ul.documents
-          = list_documents_for_module(2)
+  %li= "18:00 - xx:xx : Apéro"
+    
+.day.sheet
+  %ol
+    %li#module4
+      %p= "08:30 - 10:00 : Licensing"
+      %p= "10:00 - 10:30 : Pause"
+      %p= "10:30 - 12:00 : Licensing"
+      %p= "12:00 - 13:30 : Lunch"
+      %ul.documents
+        = list_documents_for_module(4)
         
-      %li#module3
-        %p= "15:30 - 16:30 : Intellectual Property"
-        %p= "16:30 - 17:30 : Intervenant"
-        %p= "17:30 - 18:00 : Case study"
-        %ul.documents
-          = list_documents_for_module(3)
-          
-      %li= "18:00 - xx:xx : Apéro"
-      
-  %li#day_two
-    %ol
-      %li#module4
-        %p= "08:30 - 10:00 : Licensing"
-        %p= "10:00 - 10:30 : Pause"
-        %p= "10:30 - 12:00 : Licensing"
-        %p= "12:00 - 13:30 : Lunch"
-        %ul.documents
-          = list_documents_for_module(4)
-          
-      %li#module5
-        %p= "13:30 - 15:00 : Start-up?"
-        %p= "15:00 - 15:30 : Pause"
-        %ul.documents
-          = list_documents_for_module(5)
-          
-      %li#module6
-        %p= "15:30 - 17:00 : Sales"
-        %ul.documents
-          = list_documents_for_module(6)
-          
-      %li= "17:00 - 17:30 : Clôture"
+    %li#module5
+      %p= "13:30 - 15:00 : Start-up?"
+      %p= "15:00 - 15:30 : Pause"
+      %ul.documents
+        = list_documents_for_module(5)
+        
+    %li#module6
+      %p= "15:30 - 17:00 : Sales"
+      %ul.documents
+        = list_documents_for_module(6)
+        
+    %li= "17:00 - 17:30 : Clôture"
