--- a/app/views/admin/documents/show.html.haml
+++ b/app/views/admin/documents/show.html.haml
@@ -5,11 +5,15 @@
     %h3= @document.title
   .application_date
     %p.edit= link_to "edit document", edit_admin_document_path(@document), :class => "edit"
-    
   .spacer
-  %p= "Module ID: #{@document.module_id}"
   
-  %p= "Published on: #{@document.published_at.to_s(:full)}"
+  %p= raw "#{content_tag(:strong, 'Module ID')}: #{@document.module_id}"
+  
+  %p= raw "#{content_tag(:strong, 'Published on')}: #{@document.published_at.to_s(:full)}"
   
   #document{ :class => pretty_class(@document) }
-    %p= link_to pretty_file(@document), @document.url
+    %p
+      - if @document.image?
+        = image_tag(@document.url)
+      - else
+        = raw pretty_file(@document)
