--- a/app/views/admin/mail_templates/_mail_template.html.haml
+++ b/app/views/admin/mail_templates/_mail_template.html.haml
@@ -1,3 +1,3 @@
-%tr[mail_template]
+%tr[mail_template]{ :class => cycle("", "alt") }
   %td= link_to(mail_template_title(mail_template), admin_mail_template_path(mail_template))
   %td= link_to("edit", edit_admin_mail_template_path(mail_template))
