--- a/app/views/admin/teachers/index.html.haml
+++ b/app/views/admin/teachers/index.html.haml
@@ -4,12 +4,12 @@
   .actions_right= link_to "Invite a teacher", new_teacher_invitation_path
   %table
     %colgroup
-      - 5.times do
+      - 6.times do
         %col{ :class => cycle("even", "odd") }
     %tr
       %th
-      %th= link_to "Name", admin_teachers_path(sort_parameters('name'))
-      %th= link_to "Email", admin_teachers_path(sort_parameters('email'))
+      %th= "Name"
+      %th= "Email"
       %th= "Module"
       %th
       %th
