--- a/app/views/passwords/edit.html.haml
+++ b/app/views/passwords/edit.html.haml
@@ -1,4 +1,5 @@
-- title "Change my password"
+- t = resource.encrypted_password.blank? ? "Set my password" : "Change my password"
+- title t
 
 - form_for resource_name, resource, :url => password_path(resource_name), :html => { :method => :put } do |f|
   = f.error_messages
@@ -15,4 +16,4 @@
     = f.password_field :password_confirmation
     = error_message_on resource, :password_confirmation
     
-  %p= f.submit "Change my password"
+  %p= f.submit t
