--- a/app/views/admin/teachers/show.html.haml
+++ b/app/views/admin/teachers/show.html.haml
@@ -13,9 +13,12 @@
   .card
     - unless @teacher.has_accepted_invitation?
       %p= raw "#{content_tag(:strong, 'Invitation token')}: #{@teacher.invitation_token}"
-      %p= " or "
-      - form_for :teacher, @teacher, :url => invitation_path(@teacher) do |f|
-        = f.hidden_field :email
-        %p= f.submit "Re-send an invitation"
+      
+      - semantic_form_for [:teacher, @teacher], :url => invitation_path(@teacher), :html => { :class => "main", :method => :post } do |f|
+        - f.inputs do
+          = f.input :email, :as => :hidden
+          
+        - f.buttons do
+          = f.commit_button "Re-send an invitation"
           
     %p= raw "#{content_tag(:strong, 'Module')}: #{@teacher.module_id}"
