--- a/app/views/passwords/edit.html.haml
+++ b/app/views/passwords/edit.html.haml
@@ -1,19 +1,13 @@
 - t = resource.encrypted_password.blank? ? "Set my password" : "Change my password"
 - title t
 
-- form_for resource_name, resource, :url => password_path(resource_name), :html => { :method => :put } do |f|
+- semantic_form_for [resource_name, resource], :url => password_path(resource_name), :html => { :class => "main", :method => :put } do |f|
   = f.error_messages
-  = f.hidden_field :reset_password_token
-  %p
-    = f.label :password
-    %br
-    = f.password_field :password
-    = error_message_on resource, :password
   
-  %p
-    = f.label :password_confirmation
-    %br
-    = f.password_field :password_confirmation
-    = error_message_on resource, :password_confirmation
+  - f.inputs do
+    = f.input :reset_password_token, :as => :hidden
+    = f.input :password
+    = f.input :password_confirmation
     
-  %p= f.submit t
+  - f.buttons do
+    = f.commit_button t
