--- a/app/views/passwords/new.html.haml
+++ b/app/views/passwords/new.html.haml
@@ -1,9 +1,10 @@
 - title "Forgot your password?"
 
-- form_for resource_name, resource, :url => password_path(resource_name) do |f|
+- semantic_form_for [resource_name, resource], :url => password_path(resource_name), :html => { :class => "main" } do |f|
   = f.error_messages
-
-  %p= f.label :email
-  %p= f.text_field :email
-
-  %p= f.submit "Send me reset password instructions"
+  
+  - f.inputs do
+    = f.input :email
+    
+  - f.buttons do
+    = f.commit_button "Send me reset password instructions"
