--- a/app/views/registrations/edit.html.haml
+++ b/app/views/registrations/edit.html.haml
@@ -1,33 +1,15 @@
 - title "Edit my information"
 
-- form_for resource_name, resource, :url => registration_path(resource_name), :html => { :method => :put } do |f|
+- semantic_form_for [resource_name, resource], :url => registration_path(resource_name), :html => { :class => "main", :method => :put } do |f|
   = f.error_messages
   
-  - if resource_name == :teacher
-    %p
-      = f.label :name
-      %br
-      = f.text_field :name
-  
-  %p
-    = f.label :email
-    %br
-    = f.text_field :email
+  - f.inputs do
+    - if resource_name == :teacher
+      = f.input :name
+    = f.input :email
+    = f.input :password
+    = f.input :password_confirmation
+    = f.input :current_password, :label => "Current password (we need it to confirm your changes)"
     
-  %p
-    = f.label :password
-    %br
-    = f.password_field :password
-    
-  %p
-    = f.label :password_confirmation
-    %br
-    = f.password_field :password_confirmation
-  
-  %p
-    = f.label :current_password
-    %em= "(we need it to confirm your changes)"
-    %br
-    = f.password_field :current_password
-  
-  %p= f.submit 'Update'
+  - f.buttons do
+    = f.commit_button "Update my information"
